# Southperry-Studio

./: .gitignore  LICENSE  README.md
src/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs
src-tauri/src/handlers/: audio.rs  json.rs  mod.rs
src-tauri/src/server/: extractors.rs  mod.rs  models.rs
src-tauri/src/server/controller/: mod.rs  node.rs
src-tauri/src/utils/: mod.rs  resolver.rs
src/public/: README.en.md  README.ko.md  README.zh-CN.md
src/src/: App.vue  i18n.js  main.js  style.css
src/src/components/: AnimationPlayer.vue  MapListSelector.vue  MapSelectionPage.vue  MapViewer.vue  ReadmeViewer.vue  SettingsModal.vue  SkillDetail.vue  SkillList.vue  SkillViewer.vue  WzLoader.vue
src/src/locales/: en.json  ko.json  zh-CN.json
src/src/utils/: exportUtils.js
