[package]
name = "MapleLens"
version = "1.0.0"
description = "A tool designed to preview and extract skill animations from Maplestory Wz files."
authors = ["croco"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] } 
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-opener = "2.3.0" # 保持版本一致性，如果 "2" 报错，使用具体版本

# Data Handling & Core Logic
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
rayon = "1.9.0"
wz_reader = { version = "0.0.16", features = ["json"] }
image = { version = "0.25.0", default-features = false, features = ["rayon", "bmp", "webp", "png"] }
webp-animation = "0.9.0"
sys-locale = "0.3.2"
hound = "3.5"  
vorbis_rs = "0.5"  

# Axum & Networking
tokio = { version = "1", features = ["net", "fs", "macros", "rt-multi-thread"] } # 增强 tokio features 以确保 Axum 运行
futures = { version = "0.3.30" }
portpicker = { version = "0.1.1" }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
symphonia = { version = "0.5", features = ["mp3", "pcm", "wav"] }

# Note: The version numbers for plugins might need minor adjustments (e.g., 2.3.0 vs "2") if cargo still complains about mismatch or ambiguity.